Few updates and a new item

--- a/src/main/resources/assets/food/lang/en_us.json
+++ b/src/main/resources/assets/food/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "food": "FOOD MOD",
-  "item.food.food": "Escape Plan"
+  "item.food.food": "Escape Plan",
+  "item.food.flight_plan": "Flight Plan"
 }
