--- a/src/main/resources/assets/mitz_food/lang/en_us.json
+++ b/src/main/resources/assets/mitz_food/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "mitz-food": "FOOD MOD",
-  "item.mitz-food.food": "Escape Plan",
-  "item.mitz-food.flight_plan": "Flight Plan"
+  "item.mitz_food.food": "Escape Plan",
+  "item.mitz_food.flight_plan": "Flight Plan"
 }
