--- a/src/main/resources/assets/mitz_food/lang/en_us.json
+++ b/src/main/resources/assets/mitz_food/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "mitz-food": "FOOD MOD",
+  "mitz-food": "Mitzings FOOD",
   "item.mitz_food.food": "Escape Plan",
   "item.mitz_food.flight_plan": "Flight Plan",
   "stat.mitz_food.mitz_food_effects": "Mitzings Effects"
