--- a/src/main/resources/assets/mitz_food/lang/en_us.json
+++ b/src/main/resources/assets/mitz_food/lang/en_us.json
@@ -2,5 +2,6 @@
   "mitz-food": "Mitzings FOOD",
   "item.mitz_food.food": "Escape Plan",
   "item.mitz_food.flight_plan": "Flight Plan",
+  "item.mitz_food.fight_plan": "Fight Plan",
   "stat.mitz_food.mitz_food_effects": "Mitzings Effects"
 }
